[project]
name = "whisper_test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marvin Knoll", email = "marvin.knoll@vertical-life.info"},
]
dependencies = [
    "openai>=1.23.6",
    "moviepy>=1.0.3",
    "python-dotenv>=1.0.1",
    "openai-whisper>=20231117",
    "setuptools-rust>=1.9.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
